syntax = "proto3";

package credentials;

import "credential/login.proto";

// Repository is a service that allows to interact with all hosts.
service Logins {
   rpc CreateLogin(CreateLoginRequest) returns (CreateLoginResponse) {}
   rpc GetLogin(ReadLoginRequest) returns (ReadLoginResponse) {}
   rpc GetLoginMany(ReadLoginRequest) returns (ReadLoginResponse) {}
   rpc UpsertLogin(UpsertLoginRequest) returns (UpsertLoginResponse) {}
   rpc DeleteLogin(DeleteLoginRequest) returns (DeleteLoginResponse) {}
}

message CreateLoginRequest {
    repeated credential.Login Logins = 1;
}

message CreateLoginResponse {
    repeated credential.Login Logins = 1;
}

message ReadLoginRequest{
    credential.Login Login = 1;
}

message ReadLoginResponse{
    repeated credential.Login Logins = 1;
}

message ReadLoginManyRequest{
    credential.Login Login = 1;
}

message ReadLoginManyResponse{
    repeated credential.Login Logins = 1;
}

message UpsertLoginRequest{
    repeated credential.Login Logins = 1;
}

message UpsertLoginResponse{
    repeated credential.Login Logins = 1;
}

message DeleteLoginRequest{
    repeated credential.Login Logins = 1;
}

message DeleteLoginResponse{
    repeated credential.Login Logins = 1;
}

